fix(styles): set vertical-align:top for table cells (#379)
make sure that the alignment inside the table is always on top

--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -200,7 +200,7 @@
         }
 
         td {
-            vertical-align: baseline;
+            vertical-align: top;
             white-space: normal;
         }
 
